--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -26,7 +26,7 @@ jobs:
   deploy:
     environment:
       name: github-pages
-      url: ${{ https://github.com/borhendkhil/chouchou-restaurant-menu-/blob/main/index.html}}
+      url: ${{index.html}}
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
